2000-10-30  John Harper  <jsh@eazel.com>

	* sawfish/wm/theming/make-theme-preview.jl: add the function
	that watches for preview windows to after-add-window-hook not
	before-add-window-hook to make sure that any given frame sticks

	* sawfish/wm/state/transient.jl (transient-unmap-window): when
	unmapping a transient, before deciding to focus on its parent,
	look for the most recently focused window in the same group.
	This may well be more intuitive in some circumstances

	* sawfish/wm/util/window-order.jl (window-order-most-recent):
	new keyword arg WINDOWS, a list of windows to restrict the
	returned value to

2000-10-29  John Harper  <jsh@eazel.com>

	* sawfish/wm/placement/smart.jl (sp-make-grid): don't add root
	window points if they're already in the list; add (1-
	(screen-width)) etc, so that these points aren't chopped

	(sp-get-windows): new optional parameter PRED, a predicate
	function to use to select the windows to check for overlap.
	Also included a fix from David Bustos <bustos@its.caltech.edu>
	to fix a typo in the window-mapped-p check

	(sp-do-placement): new keyword arg #:window-filter, passed to
	sp-get-windows

	(place-window-best-fit-group): new placement mode
	`best-fit-group'. Same as `best-fit', except that windows not
	in the same group as the window being placed aren't included in
	the overlap calculation (useful for transients)

2000-10-28  John Harper  <jsh@eazel.com>

	* sawfish/wm/custom-defaults.jl: added some more settings;
	hopefully they give a better default configuration..

	* sawfish/wm/custom.jl: added command line option
	`--custom-file' to set the value of custom-user-file

2000-10-26  John Harper  <jsh@eazel.com>

	* sawfish/wm/workspace.jl, sawfish/wm/commands/describe.jl,
	sawfish/wm/ext/3d-hack.jl: made some commands #:user-level
	expert

	* sawfish/wm/util/nokogiri.jl (nokogiri-report-commands): fixed
	and/or typo

	* sawfish/wm/util/groups.jl (persistent-group-ids): changed